# human-vs-ai-essays

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml
docs/: classification_report.txt  metrics.json
esp32/gateway_mqtt_bridge/: gateway_mqtt_bridge.ino  secrets.h.example
notebooks/: 01_eda.ipynb
src/app/: gui.py
src/data/: dataset.py
src/iot/: mqtt_service.py
src/models/: model.py
src/utils/: io.py  metrics.py
