[project]
name = "human-vs-ai-essays"
version = "0.1.0"
description = "Classifier to distinguish AI-generated vs human-written essays"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Your Team" }]
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.4.0",
    "matplotlib>=3.8.0",
    "jupyter>=1.0.0",
    "rich>=13.7.0",
    "joblib>=1.3.0",
    "paho-mqtt>=2.1.0",
    "opencv-python>=4.10.0",
    "pytesseract>=0.3.13",
    "esptool>=4.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]
